--- a/ubuntu/echo/public/views/sub/welcome.html
+++ b/ubuntu/echo/public/views/sub/welcome.html
@@ -6,9 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document welcome</title>
+	<link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
-	{{.}}
+	<p class="example-assets-style">{{.}}</p>
 </body>
 </html>
 {{end}}
